--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-    "extends": [
-        "neworbit"
-    ],
+    "extends": ["neworbit"],
+    "env": {
+        "jest": true
+    },
     "rules": {
         "@typescript-eslint/explicit-member-accessibility": [
             "error",
