--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
     "name": "squaredup",
     "version": "0.1.0",
-    "private": true,
+    "private": false,
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/gruckion/squareduptest.git"
+    },
+    "bugs": {
+        "url": "https://github.com/gruckion/squareduptest/issues"
+    },
+    "homepage": "https://gruckion.github.io/squareduptest/",
     "dependencies": {
         "@material-ui/core": "^4.9.11",
         "@material-ui/icons": "^4.9.1",
@@ -23,7 +31,9 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "lint:es": "eslint .\"/src/**/*.{ts,tsx}\" --max-warnings 0 --fix"
+        "lint:es": "eslint .\"/src/**/*.{ts,tsx}\" --max-warnings 0 --fix",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -43,8 +53,6 @@
     "devDependencies": {
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
         "@types/jest": "^24.0.0",
         "@types/lodash.debounce": "^4.0.6",
         "@types/node": "^12.0.0",
@@ -52,6 +60,8 @@
         "@types/react-dom": "^16.9.0",
         "@typescript-eslint/eslint-plugin": "^1.13.0",
         "@typescript-eslint/parser": "^1.13.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "^6.6.0",
         "eslint-config-neworbit": "0.0.2",
         "eslint-config-react": "^1.1.7",
@@ -59,6 +69,7 @@
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jsdoc": "^15.8.3",
         "eslint-plugin-react": "^7.14.3",
-        "eslint-plugin-react-hooks": "^2.0.1"
+        "eslint-plugin-react-hooks": "^2.0.1",
+        "gh-pages": "^2.2.0"
     }
 }
